syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "mayachain/v1/x/mayachain/types/type_observed_tx.proto";
import "gogoproto/gogo.proto";

message MsgRagnarok {
  ObservedTx tx = 1 [(gogoproto.nullable) = false];
  int64 block_height = 2;
  bytes signer = 3  [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}
